--- a/src/Hivococontents/hovoco.css
+++ b/src/Hivococontents/hovoco.css
@@ -102,7 +102,8 @@
     /* justify-content: space-around; */
     margin-top:25px ;
     margin-bottom:25px ;
-    justify-content: space-between;
+    gap:20px;
+    /* justify-content:space-evenly; */
     border:1px solid #F3F4F9;
     padding-left: 80px;
     padding-right: 80px;
